--- a/VoipClient/VoipClient.csproj
+++ b/VoipClient/VoipClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D9DCDD7-1145-420D-9931-33070A3715D3}</ProjectGuid>
+    <ProjectGuid>{6C9C54F7-4EAC-4055-9DB3-A4C2ABA5AEC6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RegistrarCommon</RootNamespace>
-    <AssemblyName>RegistrarCommon</AssemblyName>
+    <RootNamespace>VoipClient</RootNamespace>
+    <AssemblyName>VoipClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Julas.Utils, Version=2.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Julas.Utils.2.0.7\lib\net452\Julas.Utils.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="OzekiSDK">
+      <HintPath>..\..\Projekt_EM_JK\packages\OzekiSDK.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,13 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Disposable.cs" />
-    <Compile Include="ISessionCache.cs" />
-    <Compile Include="Session.cs" />
-    <Compile Include="SessionCache.cs" />
+    <Compile Include="PhoneState.cs" />
+    <Compile Include="VoipClientModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Softphone.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
