--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -101,11 +101,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RegistrarChatApiClient\ChatClient.csproj">
+    <ProjectReference Include="..\ChatClient\ChatClient.csproj">
       <Project>{6a733f41-9eba-4f2d-ad95-fd1fde3210f7}</Project>
       <Name>ChatClient</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RegistrarCommon\Common.csproj">
+    <ProjectReference Include="..\Common\Common.csproj">
       <Project>{3D9DCDD7-1145-420D-9931-33070A3715D3}</Project>
       <Name>Common</Name>
     </ProjectReference>
