--- a/ChatClient/ChatClient.csproj
+++ b/ChatClient/ChatClient.csproj
@@ -69,7 +69,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RegistrarCommon\Common.csproj">
+    <ProjectReference Include="..\Common\Common.csproj">
       <Project>{3d9dcdd7-1145-420d-9931-33070a3715d3}</Project>
       <Name>Common</Name>
     </ProjectReference>
