--- a/VoipServer/VoipServer.csproj
+++ b/VoipServer/VoipServer.csproj
@@ -77,7 +77,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RegistrarCommon\Common.csproj">
+    <ProjectReference Include="..\Common\Common.csproj">
       <Project>{3D9DCDD7-1145-420D-9931-33070A3715D3}</Project>
       <Name>Common</Name>
     </ProjectReference>
